X-ray mode on bones nullifies weight paint mode #33987

Closed
opened 2013-01-24 23:54:42 +01:00 by Luis Felipe Peredo Noguez · 6 comments

%%%--- Operating System, Graphics card ---
windows8 Quadro2000

- Blender version with error, and version that worked ---

Version with error: 53951 2.65 downloaded from build bot
Version that worked fine: 2.65a release version

- Short description of error ---

If an armature is on Xray display mode
the mesh on top of the armature will not be able
to be painted on weight paint mode.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

start blender
1-create a cube
2-create a bone
3-Now we have a cube with a bone
inside it, with not other link with each other.

3-click on X-ray under the display setting. of the
single bone so you can see the bone inside the cube.

4-grab the bone and hit "s" to increase its scale so
its clearly protruding outside the cube, this
is very important, if the bone is not protruding outside the
cube then you will be able to weight paint normally,
at least half the bone needs too be outside the
cube for the bug to be seen

5-click ctrl tab to enter to weight paint mode on
the cube.

6-try to paint a vertex on the cube, you will
see that you can't paint on the cube.

7-go to the bone inside the cube and turn
off X-ray and you will be able to paint
on the cube again.

Also I have a question, on previous version to
select a bone while on weight paint mode
you used to alt+Lmouse but right now if
you click alt you get a very cool tool to weight paint
the mesh around the bone, I like this new feature
a lot but I would like to know what is the new
way to select a bone while in weight paint mode,
as I find having to go in and out weight paint
mode to select a bone a unnecessary step.

Let me know if you were able to reproduce the bug
or of you need me to do any other test.

Thanks for your time

  • Luis
    %%%
%%%--- Operating System, Graphics card --- windows8 Quadro2000 - Blender version with error, and version that worked --- Version with error: 53951 2.65 downloaded from build bot Version that worked fine: 2.65a release version - Short description of error --- If an armature is on Xray display mode the mesh on top of the armature will not be able to be painted on weight paint mode. - Steps for others to reproduce the error (preferably based on attached .blend file) --- start blender 1-create a cube 2-create a bone 3-Now we have a cube with a bone inside it, with not other link with each other. 3-click on X-ray under the display setting. of the single bone so you can see the bone inside the cube. 4-grab the bone and hit "s" to increase its scale so its clearly protruding outside the cube, this is very important, if the bone is not protruding outside the cube then you will be able to weight paint normally, at least half the bone needs too be outside the cube for the bug to be seen 5-click ctrl tab to enter to weight paint mode on the cube. 6-try to paint a vertex on the cube, you will see that you can't paint on the cube. 7-go to the bone inside the cube and turn off X-ray and you will be able to paint on the cube again. Also I have a question, on previous version to select a bone while on weight paint mode you used to alt+Lmouse but right now if you click alt you get a very cool tool to weight paint the mesh around the bone, I like this new feature a lot but I would like to know what is the new way to select a bone while in weight paint mode, as I find having to go in and out weight paint mode to select a bone a unnecessary step. Let me know if you were able to reproduce the bug or of you need me to do any other test. Thanks for your time - Luis %%%

Changed status to: 'Open'

Changed status to: 'Open'
Member

%%%Confirmed. Will check on it. Tip for next time you report a bug, even when it's simple, an attached .blend file is always best.%%%

%%%Confirmed. Will check on it. Tip for next time you report a bug, even when it's simple, an attached .blend file is always best.%%%
Member

%%%After the step 4, applying the scale of the bone (ctrl+A) allows us to paint on the cube.
%%%

%%%After the step 4, applying the scale of the bone (ctrl+A) allows us to paint on the cube. %%%
Member

%%%I spent an hour on it, but the code I can't follow anymore. For campbell!%%%

%%%I spent an hour on it, but the code I can't follow anymore. For campbell!%%%

%%%fixed r54197.%%%

%%%fixed r54197.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33987
No description provided.