fix [#33987] X-ray mode on bones nullifies weight paint mode

This effected vertex paint mode too.